# rust-wasi

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: main.yml
byte-array/: Cargo.toml
examples/: echo.rs
src/: cli.rs  command.rs  experiment.rs  fd.rs  lib.rs  macros.rs  preview1.rs  reactor.rs  trapping_unwrap.rs
src/polyfill/: cli.rs  command.rs  reactor.rs
wasi-cli/: command.md
wasi-cli-reactor/: reactor.md
wasi-cli-reactor/wit/: reactor.wit
wasi-cli/wit/: command.wit  stderr.wit
wit/: experiment.wit  wasi-tcp.wit
