[package]
name = "wasi"
version = "0.12.0-experimental.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
description = "Experimental WASI API bindings for Rust"
edition = "2021"
categories = ["no-std", "wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasi"
documentation = "https://docs.rs/wasi"

[dependencies]
# When built as part of libstd
compiler_builtins = { version = "0.1", optional = true }
core = { version = "1.0", optional = true, package = "rustc-std-workspace-core" }
rustc-std-workspace-alloc = { version = "1.0", optional = true }
wit-bindgen = { version = "0.4.0", default-features = false }
byte-array = { path = "byte-array" }
preview1 = { version = "0.11.0", optional = true,  package = "wasi" }

[features]
default = ["std", "normal"]
std = []
# Always use this, unless you're building the preview1-to-preview2 polyfill.
normal = []
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "rustc-std-workspace-alloc"]
command = []
